Ajouter la possibilité de mettre autre chose qu'une image

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,10 @@ export(graysacle_card_txt)
 export(graysacle_header)
 export(graysacle_navbar)
 export(graysacle_one_project)
+export(graysacle_one_project_img)
 export(graysacle_page)
 export(graysacle_projects)
+export(graysacle_projects_img)
 export(graysacle_section)
 export(graysacle_section_bg)
 export(grayscale_footer)
