--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(graysacle_one_project_img)
 export(graysacle_page)
 export(graysacle_projects)
 export(graysacle_projects_img)
+export(graysacle_ressources)
 export(graysacle_section)
 export(graysacle_section_bg)
 export(grayscale_footer)
